# costae

./: CLAUDE.md  Cargo.toml  README.md  VISION.md  justfile  spec.md
costae-i3/: Cargo.toml
costae-i3/src/: events.rs  ipc.rs  main.rs  workspace.rs
costae-lifecycle-derive/: Cargo.toml
costae-lifecycle-derive/src/: lib.rs
costae-luax/: Cargo.toml
costae-notify/: Cargo.toml
costae-notify/src/: main.rs  server.rs
docs/: datapipe-vision.md  health-vision.md  pipeline-vision.md
docs/ideas/: costae-compositor-vision.md  datapipe-vision.md  health-vision.md  lifecycle-status-vision.md  logging-vision.md  management-api-vision.md  pipeline-vision.md  reconciler-as-memory-model.md  structured-unix-philosophy.md  takumi-modules-registry.md  takumi-surface-reconciliation.md
src/: app.rs  config.rs  display_manager.rs  jsx.rs  lib.rs  main.rs
src/data/: data_loop.rs  mod.rs
src/layout/: mod.rs
src/managed_set/: mod.rs  reconcile.rs
src/modules/: mod.rs
src/panel/: mod.rs
src/presentation/: mod.rs
src/presenter/: mod.rs  wayland.rs  x11.rs
src/render/: mod.rs
src/theme/: mod.rs  resolver.rs
src/themes/: default.yaml
src/windowing/: mod.rs
tests/: config_test.rs  data_loop_wake_items_test.rs  fullscreen_test.rs  hit_test.rs  image_test.rs  layout_width_test.rs  module_test.rs  module_value_dedup.rs  panel_spec_lifecycle_test.rs  panel_spec_platform_test.rs  render_cache.rs  render_dpr_test.rs  rendering_test.rs  root_bg_test.rs  spawn_string_stream_test.rs  spawned_module_drop_test.rs  strut_test.rs  substitution_test.rs  windowing_display_server_test.rs  windowing_types_test.rs  windowing_wayland_test.rs
(+11 files in other folders)
