[workspace]
members = [".", "costae-i3"]
resolver = "2"

[package]
name = "costae"
version = "0.1.0"
edition = "2021"

[dependencies]
takumi = "0.73"
x11rb = { version = "0.13", features = ["allow-unsafe-code", "randr"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2"
