[workspace]
members = [".", "costae-i3"]
resolver = "2"

[package]
name = "costae"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
takumi = "1.0.1"
x11rb = { version = "0.13", features = ["allow-unsafe-code", "randr"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2"
lru = "0.12"
json-canon = "0.1"

[dev-dependencies]
image = "0.25"
